feat(teacher): add teacher unavailability module
