# src/teacher_unavailability/dto/resource-query.dto.ts
@@ -1,0 +1,9 @@
+// get-resource-query.dto.ts
+import { IsString } from 'class-validator';
+import { IsValidTeacherId } from '../decorator/is-valid-teacher-id.decorator';
+
+export class ResourceParamDto {
+  @IsString()
+  @IsValidTeacherId()
+  teacherId: string;
+}
